--- a/关于/index.html
+++ b/关于/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="zh-cn" dir="ltr">
     <head><meta charset='utf-8'>
-<meta name='viewport' content='width=device-width, initial-scale=1'><meta name='description' content="This is a test page for i18n support.\n">
+<meta name='viewport' content='width=device-width, initial-scale=1'><meta name='description' content="某ctf小灯的blog,随便看,看完打赏点吃的吧,真的要被饿死了\n">
 <title>关于</title>
 
 <link rel='canonical' href='https://Converter258.github.io/%E5%85%B3%E4%BA%8E/'>
 
 <link rel="stylesheet" href="/scss/style.min.f6f0bafc3966f0649ec770ba82ed0cae4845338d8b4aefaaa919a31bee7cebff.css"><meta property='og:title' content="关于">
-<meta property='og:description' content="This is a test page for i18n support.\n">
+<meta property='og:description' content="某ctf小灯的blog,随便看,看完打赏点吃的吧,真的要被饿死了\n">
 <meta property='og:url' content='https://Converter258.github.io/%E5%85%B3%E4%BA%8E/'>
 <meta property='og:site_name' content='Converter258'>
 <meta property='og:type' content='article'><meta property='article:section' content='Page' />
 <meta name="twitter:title" content="关于">
-<meta name="twitter:description" content="This is a test page for i18n support.\n">
+<meta name="twitter:description" content="某ctf小灯的blog,随便看,看完打赏点吃的吧,真的要被饿死了\n">
     </head>
     <body class="
     article-page
@@ -253,7 +253,7 @@
     <section class="article-content">
     
     
-    <p>This is a test page for i18n support.</p>
+    <p>某ctf小灯的blog,随便看,看完打赏点吃的吧,真的要被饿死了</p>
 
 </section>
 
