--- a/关于/index.html
+++ b/关于/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="zh-cn" dir="ltr">
-    <head><meta charset='utf-8'>
+    <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script><meta charset='utf-8'>
 <meta name='viewport' content='width=device-width, initial-scale=1'><meta name='description' content="某ctf小灯的blog,随便看,看完打赏点吃的吧,真的要被饿死了\n">
 <title>关于</title>
 
-<link rel='canonical' href='https://Converter258.github.io/%E5%85%B3%E4%BA%8E/'>
+<link rel='canonical' href='http://localhost:1313/%E5%85%B3%E4%BA%8E/'>
 
 <link rel="stylesheet" href="/scss/style.min.f6f0bafc3966f0649ec770ba82ed0cae4845338d8b4aefaaa919a31bee7cebff.css"><meta property='og:title' content="关于">
 <meta property='og:description' content="某ctf小灯的blog,随便看,看完打赏点吃的吧,真的要被饿死了\n">
-<meta property='og:url' content='https://Converter258.github.io/%E5%85%B3%E4%BA%8E/'>
+<meta property='og:url' content='http://localhost:1313/%E5%85%B3%E4%BA%8E/'>
 <meta property='og:site_name' content='Converter258'>
 <meta property='og:type' content='article'><meta property='article:section' content='Page' />
 <meta name="twitter:title" content="关于">
@@ -402,7 +402,7 @@
                 src="https://cdn.jsdelivr.net/npm/node-vibrant@3.1.6/dist/vibrant.min.js"integrity="sha256-awcR2jno4kI5X0zL8ex0vi2z&#43;KMkF24hUW8WePSA9HM="crossorigin="anonymous"
                 
                 >
-            </script><script type="text/javascript" src="/ts/main.c922af694cc257bf1ecc41c0dd7b0430f9114ec280ccf67cd2c6ad55f5316c4e.js" defer></script>
+            </script><script type="text/javascript" src="/ts/main.76af3192973d9c142d10a7a0f4711d6028f1034e8c3f81ae6a032fdf70ff1ea5.js" defer></script>
 <script>
     (function () {
         const customFont = document.createElement('link');
